--- a/librechat/values.yaml
+++ b/librechat/values.yaml
@@ -36,7 +36,7 @@ librechat:
 
   # # For adding a custom config yaml-file you can set the contents in this var
   configYamlContent: |
-    
+
     version: 1.0.9
 
     # Cache settings: Set to true to enable caching
@@ -45,27 +45,31 @@ librechat:
     # Example Registration Object Structure (optional)
     registration:
       socialLogins: ['github', 'google', 'discord', 'openid', 'facebook']
-    
+
     endpoints:
-        custom:
-        - name: "Ollama"
-          apiKey: "ollama"
-          baseURL: "http://localhost:11434/v1/chat/completions" 
-          models:
-            default: [
-              "llama2",
-              "mistral",
-              "codellama",
-              "dolphin-mixtral",
-              "mistral-openorca"
-              ]
-            fetch: true
-          titleConvo: true
-          titleModel: "current_model"
-          summarize: false
-          summaryModel: "current_model"
-          forcePrompt: false
-          modelDisplayLabel: "Ollama"
+      custom:
+      - name: "Ollama"
+        apiKey: "ollama"
+        baseURL: "http://host.docker.internal:11434/v1/"
+        models:
+          default: [
+            "llama3",
+            "starcoder2:3b"
+          ]
+          fetch: false # fetching list of models is not supported
+        titleConvo: true
+        titleModel: "current_model"
+        summarize: false
+        summaryModel: "current_model"
+        forcePrompt: false
+        modelDisplayLabel: "Ollama"
+        addParams:
+            "stop": [
+                "<|start_header_id|>",
+                "<|end_header_id|>",
+                "<|eot_id|>",
+                "<|reserved_special_token"
+            ]
 
 
   # # name of existing Yaml configmap, key must be librechat.yaml
